--- a/app/src/main/res/layout/activity_dispatch.xml
+++ b/app/src/main/res/layout/activity_dispatch.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,57 +7,102 @@
 
     <TextView
         android:id="@+id/dispatch_title_tv"
-        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Dispatch Form"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textSize="30sp" />
 
 
     <TextView
-        android:layout_below="@id/dispatch_title_tv"
         android:id="@+id/dispatch_date_label_tv"
         style="@style/hard_disk_form_labels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/dispatch_title_tv"
         android:text="Dispatch Date:" />
 
     <TextView
         android:id="@+id/dispatch_time_label_tv"
         style="@style/hard_disk_form_labels"
-        android:layout_below="@id/dispatch_date_label_tv"
-        android:text="Dispatch Time:"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dispatch_date_label_tv"
+        android:text="Dispatch Time:" />
 
     <TextView
-        android:layout_below="@id/dispatch_time_label_tv"
         android:id="@+id/d_hdd_sn_label_tv"
         style="@style/hard_disk_form_labels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/dispatch_time_label_tv"
         android:text="Dispatch HDD SN Size:" />
 
     <TextView
         android:id="@+id/d_authorised_agent_label_tv"
-        android:text="Authorised Agent:"
-        android:layout_below="@id/d_hdd_sn_label_tv"
         style="@style/hard_disk_form_labels"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/d_hdd_sn_label_tv"
+        android:text="Authorised Agent:" />
 
     <Button
         android:id="@+id/d_submit_btn"
-        android:text="Submit"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/d_authorised_agent_label_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/d_authorised_agent_label_tv"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="Submit" />
 
 
+    <!--    Right side input code-->
 
+    <EditText
+        android:id="@+id/d_hdd_sn_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/d_hdd_sn_label_tv"
+        android:layout_toEndOf="@id/d_hdd_sn_label_tv"
+        android:layout_toRightOf="@id/d_hdd_sn_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
+    <EditText
+        android:id="@+id/d_authorised_agent_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/d_authorised_agent_label_tv"
+        android:layout_toEndOf="@id/d_authorised_agent_label_tv"
+        android:layout_toRightOf="@id/d_authorised_agent_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/dispatch_date_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/dispatch_date_label_tv"
+        android:layout_toEndOf="@id/dispatch_date_label_tv"
+        android:layout_toRightOf="@id/dispatch_date_label_tv"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Select Date" />
+
+    <EditText
+        android:id="@+id/dispatch_time_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/dispatch_time_label_tv"
+        android:layout_toEndOf="@id/dispatch_time_label_tv"
+        android:layout_toRightOf="@id/dispatch_time_label_tv"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Pick Time" />
 
 
 </RelativeLayout>
