--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,26 +96,123 @@
         android:text="Received HDD SN Size:" />
 
 
-
     <Button
         android:id="@+id/r_submit_btn"
-        android:text="Submit"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/r_hdd_sn_label_tv"
-        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/r_hdd_sn_label_tv"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="Submit" />
 
 
-<!--    Right Side Fields from now on-->
+    <!--    Right Side Fields from now on-->
 
     <Spinner
         android:id="@+id/encoding_spinner"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@id/encoding_label_tv"
-        android:layout_toRightOf="@id/encoding_label_tv"
         android:layout_marginLeft="8dp"
-        android:layout_height="wrap_content"/>
+        android:layout_toRightOf="@id/encoding_label_tv" />
+
+    <EditText
+        android:id="@+id/film_name_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/film_name_label"
+        android:layout_toEndOf="@id/film_name_label"
+        android:layout_toRightOf="@id/film_name_label"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/production_company_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/production_company_label_tv"
+        android:layout_toEndOf="@id/production_company_label_tv"
+        android:layout_toRightOf="@id/production_company_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+
+    <EditText
+        android:id="@+id/authorised_agent_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/authorised_agent_label_tv"
+        android:layout_toEndOf="@id/authorised_agent_label_tv"
+        android:layout_toRightOf="@id/authorised_agent_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/reel_format_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/reel_format_label_tv"
+        android:layout_toEndOf="@id/reel_format_label_tv"
+        android:layout_toRightOf="@id/reel_format_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/reel_wise_duration_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/reel_wise_duration_label_tv"
+        android:layout_toEndOf="@id/reel_wise_duration_label_tv"
+        android:layout_toRightOf="@id/reel_wise_duration_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/total_duration_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/total_duration_label_tv"
+        android:layout_toEndOf="@id/total_duration_label_tv"
+        android:layout_toRightOf="@id/total_duration_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/r_hdd_sn_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/r_hdd_sn_label_tv"
+        android:layout_toEndOf="@id/r_hdd_sn_label_tv"
+        android:layout_toRightOf="@id/r_hdd_sn_label_tv"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+
+    <EditText
+        android:id="@+id/received_date_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/received_date_label_tv"
+        android:layout_toRightOf="@id/received_date_label_tv"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Select Date" />
+
+    <EditText
+        android:id="@+id/received_time_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/received_time_label_tv"
+        android:layout_toRightOf="@id/received_time_label_tv"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Pick Time" />
+
+
 </RelativeLayout>
 
 
