Created Separate fields for Hdd Sno and Size in both the forms.

--- a/app/src/main/res/layout/activity_dispatch.xml
+++ b/app/src/main/res/layout/activity_dispatch.xml
@@ -36,14 +36,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dispatch_time_label_tv"
-        android:text="Dispatch HDD SN Size:" />
+        android:text="Dispatch HDD SN:" />
+
+    <TextView
+        android:id="@+id/d_hdd_size_tv"
+        style="@style/hard_disk_form_labels"
+        android:text="Dispatch HDD Size:"
+        android:layout_below="@id/d_hdd_sn_label_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/d_authorised_agent_label_tv"
         style="@style/hard_disk_form_labels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/d_hdd_sn_label_tv"
+        android:layout_below="@id/d_hdd_size_tv"
         android:text="Authorised Agent:" />
 
     <Button
@@ -77,6 +85,15 @@
         android:layout_toRightOf="@id/d_authorised_agent_label_tv"
         android:ems="10"
         android:inputType="textPersonName" />
+
+    <EditText
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:id="@+id/d_hdd_size_edit_text"
+        android:layout_toRightOf="@id/d_hdd_size_tv"
+        android:layout_alignBottom="@id/d_hdd_size_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/dispatch_date_edit_text"
