--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/total_duration_label_tv"
-            android:text="Received HDD SN Size:" />
+            android:text="Received HDD SN:" />
+
+        <TextView
+            android:id="@+id/r_hdd_size_tv"
+            style="@style/hard_disk_form_labels"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/r_hdd_sn_label_tv"
+            android:text="HDD Size:" />
 
 
         <Button
@@ -202,6 +210,17 @@
             android:hint="Pick Time" />
 
 
+        <EditText
+            android:id="@+id/r_hdd_size_edit_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/r_hdd_size_tv"
+            android:layout_toRightOf="@id/r_hdd_size_tv"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:layout_toEndOf="@id/r_hdd_size_tv" />
+
+
         <!--    Let's Make edits for the reel wise durations-->
 
 
@@ -223,12 +242,12 @@
 
         <Button
             android:id="@+id/remove_reel_btn"
-            android:text="Remove Reel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/add_reel_btn"
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
-            android:layout_alignTop="@id/add_reel_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:text="Remove Reel" />
 
         <LinearLayout
             android:id="@+id/reels_linear_layout"
