--- a/app/src/main/res/layout/movie_poster_layout.xml
+++ b/app/src/main/res/layout/movie_poster_layout.xml
@@ -10,13 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
-
     <TextView
-        android:text="Movie Title"
+        android:id="@+id/tv_movie_title"
         android:textColor="#ffffff"
-        android:layout_gravity="bottom"
+        android:visibility="invisible"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="@string/movie_title_placeholder" />
 
 </FrameLayout>
